fixing overlap issues

--- a/test.commotion/css/commotion.css
+++ b/test.commotion/css/commotion.css
@@ -123,7 +123,7 @@ li.static-nodrop a:visited {
   text-decoration: none;
   background: none;
   padding: 0;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: bold;
 }
 .contentcontainer a:hover, .contentcontainer a:visited {
@@ -354,8 +354,10 @@ div#download-button-block .download-button a.button {
 }
 /* Files Download Table */
 .contentcontainer table.files {
-    width: 960px;
     border: 1px #ccc solid;
+    max-width: 70%;
+    border: 1px #ccc solid;
+    margin: 10px 15px 15px 0;
 }
 .contentcontainer table.files thead th {
   background: #F7F7F7;
@@ -367,7 +369,7 @@ div#download-button-block .download-button a.button {
 }
 .contentcontainer table.files td {
     text-align: center;
-    padding: 0 5px;
+    padding: 8px;
     word-wrap: break-word;
 }
 .contentcontainer table.files tr.even td{
@@ -410,6 +412,7 @@ div#download-button-block .download-button a.button {
   border-bottom:none;
   color: #000000;
   background: none;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 #subsection-menu ul,
 #subsection-menu ul li {
@@ -497,4 +500,8 @@ div#download-button-block .download-button a.button {
 .cck-section-page ul.submenu a:hover {
   background: #CCCCCC;
   border-left: 2px solid #666666;
+}
+
+img {
+    padding: 10px;
 }
